# ImpressMem

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
examples/: context_example.py  tools_example.py
impressmem/: __init__.py  config.py  context_builder.py  impression_manager.py  manager.py  utils.py
impressmem/tools/: __init__.py  base.py  organize_impressions.py  recall_impressions.py  save_impression.py
tests/: __init__.py  test_basic.py
