[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "impressmem"
version = "0.1.0"
authors = [
    { name="", email="" }
]
description = "Impression-based Memory Management Library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = ""
Issues = ""